--- a/notes.tex
+++ b/notes.tex
@@ -20,6 +20,8 @@
 \usepackage{tikz}
 \usetikzlibrary{arrows,automata,positioning}
 
+\usepackage{prooftrees} %The trees n things!
+
 \newtheorem{proposition}{Proposition}
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}[theorem]
