--- a/notes.tex
+++ b/notes.tex
@@ -39,7 +39,7 @@
 \DeclareMathOperator{\lt}{<}
 %\DeclareMathOperator{\inv}/toolazy
 
-\title{PHIL 3something - Logic II}
+\title{PHIL 379 - Logic II}
 \date{Winter 2016}
 \author{Scott Saunders - 10163541}
 
